fixed font to resize on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -35,14 +35,14 @@ html, body{
 
 .navbar .navbar-brand{
     margin-top: auto;
-    font-size: 175%;
+    font-size: 150%;
 	text-shadow: 1px 1px black;
     text-align: right;
 }
 
 .navbar .nav-link{
 	text-shadow: 1px 1px black;
-	font-size: 150%;
+	font-size: 125%;
     margin-left: 25px;
     text-align: right;
 }
@@ -70,13 +70,26 @@ html, body{
     right: 15%;
 }
 
+@media only screen and (max-width: 767px) {
+  .intro{
+  	  bottom: 10%;
+      right: 5%;
+  }
+}
+
 #name_label{
 	border-bottom: 2px solid currentColor;
     text-align: left;
-    font-size: 400%;
+    font-size: 350%;
     text-shadow: 3px 3px white;
 	color: rgb(59,51,56);
     width: 100%;
+}
+
+@media only screen and (max-width: 767px) {
+  #name_label{
+  	  font-size: 225%;
+  }
 }
 
 #intro_text{
@@ -85,4 +98,10 @@ html, body{
     text-shadow: 2px 2px white;
     color: rgb(59,51,56);
     width: 100%;
+}
+
+@media only screen and (max-width: 767px) {
+  #intro_text{
+  	  font-size: 125%;
+  }
 }
